// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridTwoColumns /> Should render two columns grid 1`] = `
.c5 {
  color: #FFFFFF;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr 2fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 3.2rem;
}

.c3 .c4 {
  margin-bottom: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background: #0A1128;
  color: #FFFFFF;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

.c6 {
  font-size: 1.6rem;
}

@media (max-width:768px) {
  .c5 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c2 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c3 {
    margin-bottom: 3.2rem;
  }
}

<div>
  <div
    class="c0"
    id="id-8664-94456859749"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h1
            class="c4 c5"
          >
            Hello GridTwoColumns
          </h1>
          <div
            class="c6"
          >
            Ipsum cillum qui duis duis dolor est. Ut eiusmod do enim labore.
    Dolore culpa exercitation dolore cupidatat exercitation elit est
    reprehenderit aute consectetur esse. Tempor aute qui minim ullamco
    dolore dolore qui. Ex labore reprehenderit duis enim incididunt irure.
    Aliqua laboris velit deserunt irure mollit excepteur ea.
    Fugiat minim ex non id officia quis.
          </div>
        </div>
        <div
          class=""
        >
          <img
            alt="Hello GridTwoColumns"
            class=""
            src="assets/images/javascript.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridTwoColumns /> Should render two columns grid darkMode 1`] = `
.c5 {
  color: #0A1128;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr 2fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 3.2rem;
}

.c3 .c4 {
  margin-bottom: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

.c6 {
  font-size: 1.6rem;
}

@media (max-width:768px) {
  .c5 {
    font-size: 4.0rem;
  }
}

@media (max-width:768px) {
  .c2 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c3 {
    margin-bottom: 3.2rem;
  }
}

<div>
  <div
    class="c0"
    id="id-6490-447046366592"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h1
            class="c4 c5"
          >
            Hello GridTwoColumns
          </h1>
          <div
            class="c6"
          >
            Ipsum cillum qui duis duis dolor est. Ut eiusmod do enim labore.
    Dolore culpa exercitation dolore cupidatat exercitation elit est
    reprehenderit aute consectetur esse. Tempor aute qui minim ullamco
    dolore dolore qui. Ex labore reprehenderit duis enim incididunt irure.
    Aliqua laboris velit deserunt irure mollit excepteur ea.
    Fugiat minim ex non id officia quis.
          </div>
        </div>
        <div
          class=""
        >
          <img
            alt="Hello GridTwoColumns"
            class=""
            src="assets/images/javascript.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
